Updated README by adding detailed description of features.